# extract-rvk-notations

./: .env  .gitignore  README.md  adjust_data.py  create_table_only_with_isbn.py  create_testdata.py  main.py  pyproject.toml  slice_dataset.py
data/: result.csv  test.xlsx
