[project]
name = "extract-rvk-notation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "bs4>=0.0.2",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "pytz>=2024.2",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "tqdm>=4.67.0",
]
